@@ -5,7 +5,6 @@ import static net.kyori.adventure.text.format.NamedTextColor.LIGHT_PURPLE;
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -19,11 +18,12 @@ import org.jetbrains.annotations.NotNull;
 import org.simpleyaml.configuration.ConfigurationSection;
 import org.simpleyaml.configuration.MemoryConfiguration;
 import org.simpleyaml.configuration.file.YamlFile;
+
 import com.google.gson.Gson;
 
 import me.szumielxd.portfel.api.objects.CommonSender;
 import me.szumielxd.portfel.api.objects.User;
-import me.szumielxd.portfel.common.utils.MiscUtils;
+import me.szumielxd.portfel.common.lang.draft.MessageDraft;
 import me.szumielxd.portfel.proxy.PortfelProxyImpl;
 import me.szumielxd.portfel.proxy.api.objects.ProxyPlayer;
 import net.kyori.adventure.text.Component;
@@ -32,14 +32,14 @@ import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
 public class OrdersManager {
 	
 	
-	private final PortfelProxyImpl plugin;
+	private final PortfelProxyImpl<?> plugin;
 	private final File file;
 	private Map<String, GlobalOrder> orders = new HashMap<>();
 	
 	
-	public OrdersManager(PortfelProxyImpl plugin) {
+	public OrdersManager(PortfelProxyImpl<?> plugin) {
 		this.plugin = plugin;
-		this.file = new File(this.plugin.getDataFolder().toFile(), "orders.yml");
+		this.file = new File(this.plugin.getDataDirectory().toFile(), "orders.yml");
 	}
 	
 	
@@ -59,10 +59,10 @@ public class OrdersManager {
 		yaml.addDefaults(defaults);
 		try {
 			if (yaml.exists()) {
-				this.plugin.getLogger().info(String.format("Loading orders from file `%s`", this.file.getName()));
+				this.plugin.getLogger().info(() -> "Loading orders from file `%s`".formatted(this.file.getName()));
 				yaml.load();
 			} else {
-				this.plugin.getLogger().info(String.format("Creating new orders container as file `%s`", this.file.getName()));
+				this.plugin.getLogger().info(() -> "Creating new orders container as file `%s`".formatted(this.file.getName()));
 				yaml.setComment(defaultNothing.getCurrentPath(), 
 						"""
 						This is the simplest example of creating new global order.
@@ -184,9 +184,9 @@ public class OrdersManager {
 		public boolean examine(User user, String orderName) {
 			final Matcher match = this.pattern.matcher(orderName);
 			if (!match.matches()) return false;
-			Collection<ProxyPlayer> all = plugin.getCommonServer().getPlayers();
-			ProxyPlayer player = plugin.getCommonServer().getPlayer(user.getUniqueId());
-			CommonSender console = plugin.getCommonServer().getConsole();
+			var all = plugin.getCommonServer().getPlayers();
+			ProxyPlayer<?> player = plugin.getCommonServer().getPlayer(user.getUniqueId());
+			CommonSender<?> console = plugin.getCommonServer().getConsole();
 			UnaryOperator<String> replacer = s -> {
 				s = s.replace("%player%", user.getName())
 						.replace("%playerId%", user.getUniqueId().toString());
@@ -197,13 +197,21 @@ public class OrdersManager {
 			};
 			
 			// Broadcast
-			this.broadcast.stream().map(replacer).map(MiscUtils::parseComponent).forEach(msg -> all.forEach(p -> p.sendMessage(msg)));
+			this.broadcast.stream()
+					.map(replacer)
+					.map(MessageDraft::minimessage)
+					.forEach(msg -> all.forEach(msg::send));
 			
 			// Message
-			this.message.stream().map(replacer).map(MiscUtils::parseComponent).forEach(player::sendMessage);
+			this.message.stream()
+					.map(replacer)
+					.map(MessageDraft::minimessage)
+					.forEach(msg -> msg.send(player));
 			
 			// Command
-			this.command.stream().map(replacer).forEach(console::executeProxyCommand);
+			this.command.stream()
+					.map(replacer)
+					.forEach(console::executeProxyCommand);
 			return true;
 		}
 		
